Tests graalvm-community-jdk21u-issues-28